--- a/buildspec.yml
+++ b/buildspec.yml
@@ -27,7 +27,7 @@ phases:
     commands:
       - aws ecr get-login-password --region ${ECR_REGION} | docker login --username AWS --password-stdin ${ECR_REPO}
       - docker push ${ECR_REPO}/${REPO_NAME}:latest
-      - docker push ${ECR_REPO}/${REPO_NAME}:$v{CODEBUILD_BUILD_NUMBER}
+      - docker push ${ECR_REPO}/${REPO_NAME}:v${CODEBUILD_BUILD_NUMBER}
       - printf '[{"name":"%s","imageUri:"%s"}]' ${CONTAINER_NAME} ${ECR_REPO}/${REPO_NAME}:latest > imagedefinitions.json
       - echo "build complete..."
 
