--- a/buildspec.yml
+++ b/buildspec.yml
@@ -28,7 +28,7 @@ phases:
       - aws ecr get-login-password --region ${ECR_REGION} | docker login --username AWS --password-stdin ${ECR_REPO}
       - docker push ${ECR_REPO}/${REPO_NAME}:latest
       - docker push ${ECR_REPO}/${REPO_NAME}:v${CODEBUILD_BUILD_NUMBER}
-      - printf '[{"name":"%s","imageUri:"%s"}]' ${CONTAINER_NAME} ${ECR_REPO}/${REPO_NAME}:latest > imagedefinitions.json
+      - printf '[{"name":"%s","imageUri":"%s"}]' ${CONTAINER_NAME} ${ECR_REPO}/${REPO_NAME}:latest > imagedefinitions.json
       - echo "build complete..."
 
 reports: # Report file
